# simple_talking_anime_avatar

./: .gitignore  README copy.md  README.md  pyproject.toml  test.py
.github/workflows/: cicd-dev.yml  cicd-prod.yml
src/simple_talking_anime_avatar/: avatar_gen.py  speech_to_vid.py
src/talking_anime_avatar/: speech_to_vid.py
